--- a/style.css
+++ b/style.css
@@ -24,13 +24,13 @@ main .container {
     max-width: 300px;
     width: 100%;
     margin: 110px auto;
-    height: 450px;
     display: block;
     text-align: start;
     border-radius: 5px;
     padding: 36px 18px;
     box-shadow: 0px 0px 15px rgb(110, 110, 110);
     background-color: #fff;
+    text-align: center;
 }
 
 main .container h1 {
@@ -44,9 +44,10 @@ main .container input {
     border: none;
     border-bottom: 1px solid rgb(0, 0, 0);
     width: 265px;
-    margin-bottom: 12px;
+    padding: 16px 0px;
     padding-bottom: 8px;
     background-color: transparent;
+    text-align: center;
 }
 
 main .container input:focus {
@@ -55,7 +56,7 @@ main .container input:focus {
 }
 
 main .container .submit {
-    margin-top: 12px;
+    margin: 12px 0px;
     width: 265px;
     height: 32px;
     background-image: linear-gradient(to right, rgb(255, 120, 142), rgb(250, 72, 101));
@@ -70,51 +71,18 @@ main .container .submit:hover {
     background-image: linear-gradient(to right, rgb(252, 147, 165), rgb(255, 97, 123));
 }
 
-main .container p {
-    text-align: center;
-    margin: 18px 0px;
-    font-family: sans-serif;
-    font-size: 12px;
-}
-
-main .container .tt {
-    width: 265px;
-    height: 35px;
-    margin-bottom: 12px;
-    color: #fff;
-    background-color: rgb(48, 186, 250);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-family: sans-serif;
-    padding-right: 10px;
-}
-
-main .container .tt:hover {
-    background-color: rgb(103, 207, 255);
-}
-
-main .container .face {
-    width: 265px;
-    height: 35px;
-    margin-bottom: 36px;
-    color: #fff;
-    background-color: rgb(36, 106, 138);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-family: sans-serif;
-}
-
-main .container .face:hover {
-    background-color: rgb(68, 127, 155);
-}
-
 main .container a {
-    margin-left: 75px;
     text-decoration: none;
 }
 
 main .container a:hover {
     border-bottom: 1px solid;
+}
+
+/* Estilização do aviso de informação inválida */
+
+.error-message {
+    color: red;
+    padding: 2px;
+    font-style: italic;
 }
